remove init_config
